fixed alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -744,6 +744,8 @@ section,
 
 .hero p {
   text-align: center;
+  font-size: 15px;
+  padding-bottom: 10px;
   animation-delay: 0.4s;
 }
 
